<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 Jan Heinrich Reimer
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Easy Travel</string>

    <string name="title_menu_github">View on GitHub</string>
    <string name="title_menu_reset_first_start">Reset "First start" flag</string>

    <string name="label_options">Options:</string>
    <string name="label_option_fullscreen">Enable fullscreen</string>
    <string name="label_option_scrollable">Scrollable slides</string>
    <string name="label_option_custom_fragments">Enable custom fragments</string>
    <string name="label_option_permissions">Enable permission request</string>
    <string name="label_option_show_back">Show back button</string>
    <string name="label_option_show_next">Show next button</string>
    <string name="label_option_skip_enabled">Enable skip button</string>
    <string name="label_option_finish_enabled">Enable finish button</string>
    <string name="label_option_get_started_enabled">Enable \"Get Started\" button</string>
    <string name="label_start_intro">Start intro</string>
    <string name="label_or">or</string>
    <string name="label_demos">Demos: </string>
    <string name="label_start_canteen">\"Canteen\" intro</string>
    <string name="label_start_splash">Splash screen</string>

    <string name="title_material_metaphor">Material is the metaphor</string>
    <string name="title_material_bold">Bold, graphic, intentional</string>
    <string name="title_material_motion">Motion provides meaning</string>
    <string name="title_material_shadow">Light and shadow</string>

    <string name="description_material_metaphor">A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.</string>
    <string name="description_material_bold">The foundational elements of print-based design – typography, grids, space, scale, color, and use of imagery – guide visual treatments.</string>
    <string name="description_material_motion">Motion respects and reinforces the user as the prime mover. Primary user actions are inflection points that initiate motion, transforming the whole design.</string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.</string>

    <string name="title_permissions">Requesting permissions was never easier.</string>
    <string name="description_permissions">This app needs the camera and storage permission.\nIt\'s only to show how permission requests work in this library and we won\'t do anything with the granted permissions.</string>
    <string name="label_grant_permissions">Please grant the permissions before proceeding.</string>

    <string name="label_button_cta">Click me!</string>
    <string name="toast_button_cta">Hey, that\'s how custom CTA buttons work in material-intro!</string>

    <string name="title_fragment_login">This is a custom fragment.</string>
    <string name="hint_fake_username">Fake username</string>
    <string name="hint_fake_password">Fake password</string>
    <string name="label_fake_login">Fake login</string>
    <string name="label_fake_login_loading">Loading…</string>
    <string name="label_fake_login_success">Logged in ☺</string>
    <string name="label_fake_login_success_message">Successfully faked login.</string>
    <string name="label_fill_out_form">Please fill out the form before proceeding.</string>

    <string name="title_fragment_custom">Take off!</string>

    <string name="label_activity_finish">Nothing here…\n…just a demo how to create a splash screen intro.</string>

    <string name="title_canteen_intro1" translatable="false">Train details on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Book a room</string>
    <string name="title_canteen_intro3" translatable="false">Get a ride</string>
    <string name="description_canteen_intro1" translatable="false">Looking for IRCTC Train details? Just browse the latest updates on fare and seats.</string>
    <string name="description_canteen_intro2" translatable="false">Search and compare hotel near you. Instant booking</string>
    <string name="description_canteen_intro3" translatable="false">Book a cab, compare and ride, UBER, OLA, etc</string>
    <string name="label_button_cta_canteen_intro" translatable="false">Get started</string>
    <string name="title_activity_welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_your_email">Your Email Address</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_your_password">Set Password</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_sign_in_google">Google</string>
    <string name="action_sign_in_facebook">Facebook</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_reset">Reset</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">Mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email_field_required">You need to enter a email</string>
    <string name="password_field_required">You need to enter a password</string>
    <string name="fullname_field_required">Name cannot be blank</string>
    <string name="phone_field_required">Phone cannot be blank</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="title_activity_sign_up_login">HAVE AN ACCOUNT?</string>
    <string name="title_terms_conditions_checkbox">I have read and accept</string>
    <string name="title_terms_conditions"> Terms and Conditions</string>
    <string name="title_activity_sign">Sign up</string>
    <string name="description_activity_forget_password">Enter your email and we will send a link to recover your accout.</string>
    <string name="title_activity_terms_conditions">Terms Conditions</string>

    <string name="auth_failed">Login auth failed</string>
    <string name="facebook_app_id">351837651951877</string>
    <string name="fb_login_protocol_scheme">fb351837651951877</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="action_settings">Settings</string>
</resources>
